master list interfaces: admin and super A

--- a/ASI.Basecode.WebApp/Views/Book/Create.cshtml
+++ b/ASI.Basecode.WebApp/Views/Book/Create.cshtml
@@ -12,6 +12,11 @@
 
 }
 
+@{
+    ViewBag.ShowSideBar = true; 
+    ViewData["Title"] = "Create Book";
+}
+
 @using (Html.BeginForm("Create", "Book", FormMethod.Post))
 {
     <div class="form-container container">
