--- a/ASI.Basecode.WebApp/Views/Admin/Index.cshtml
+++ b/ASI.Basecode.WebApp/Views/Admin/Index.cshtml
@@ -1,12 +1,66 @@
 ﻿@model IEnumerable<Microsoft.AspNetCore.Identity.IdentityUser>
+ 
 
 @{
     ViewBag.ShowSideBar = true;
     ViewBag.ShowUserList = true;
-    ViewData["Title"] = "Login Page";
+    ViewData["Title"] = "Home";
+}
+@section styles {
+    <link rel="stylesheet" href="~/css/dashboard.css" />
+    <link rel="stylesheet" href="~/css/landing.css" />
 }
 
-<table>
+<h1 class="module-title">Home</h1>
+<div class="container">
+    <div class="row"> 
+            <div class="col">
+                <div class="module-container">
+                    <div class="row">
+                        <div class="col">
+                            <h3 class="module-title">User Masterlist</h3>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col">
+                            <div class="masterlist-module-title">
+                                <a class="module-item-title" asp-controller="Admin" asp-action="Index"><i class="sidenav-icon fa-solid fa-user-group"></i>Users</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div> 
+
+        <div class="col">
+            <div class="module-container">
+                <div class="row">
+                    <div class="col">
+                        <h3 class="module-title">Book Masterlist</h3>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col">
+                        <div class="masterlist-module-title">
+                            <a class="module-item-title" asp-controller="Book" asp-action="Index"><i class="sidenav-icon fa-solid fa-masks-theater"></i>Genres</a>
+                        </div>
+                        <div class="masterlist-module-title-odd">
+                            <a asp-controller="Book" asp-action="Index"><i class="sidenav-icon fa-solid fa-book"></i> Books</a>
+                        </div>
+                        <div class="masterlist-module-title">
+                            <a asp-controller="Book" asp-action="Index"><i class="sidenav-icon fa-solid fa-feather"></i> Authors</a>
+                        </div>
+                        <div class="masterlist-module-title-odd">
+                            <a asp-controller="Book" asp-action="Index"><i class="sidenav-icon fa-solid fa-comment-dots"></i>Reviews</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+</div>
+
+@* <table>
     <thead>
         <tr>
             <th>Username</th>
@@ -23,3 +77,4 @@
         }
     </tbody>
 </table>
+ *@
