--- a/ASI.Basecode.WebApp/wwwroot/css/sidebar.css
+++ b/ASI.Basecode.WebApp/wwwroot/css/sidebar.css
@@ -9,17 +9,19 @@
     --star-color: #FFA928;
 }
 
+.sidenav-icon{
+    padding-right:20px;
+}
+
 .sidenav {
     height: 100%;
-    width: 160px;
-    position: absolute; 
-    left: 0;
+    width: 210px;
+    position: absolute;
+    left: 0; 
     background-color: #fff;
     overflow-x: hidden;
     padding-top: 20px;
-    box-shadow: -1px 2px 5px 0px rgba(0,0,0,0.56);
-    -webkit-box-shadow: -1px 2px 5px 0px rgba(0,0,0,0.56);
-    -moz-box-shadow: -1px 2px 5px 0px rgba(0,0,0,0.56);
+    box-shadow: 1px 30px 15px rgba(161, 182, 253, 0.525);
 }
 
 .masterlist-title {
