--- a/ASI.Basecode.WebApp/Views/Book/Index.cshtml
+++ b/ASI.Basecode.WebApp/Views/Book/Index.cshtml
@@ -4,7 +4,7 @@
 integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous"> *@
 
 @{
-    ViewBag.ShowSideBar = true; 
+    ViewBag.ShowSideBar = true;
     ViewData["Title"] = "Book Masterlist";
 }
 
@@ -32,10 +32,13 @@ integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2
 
             <div class="col col-left">
                 <div class="search-container">
-                    <form class="search-container d-flex" role="search">
-                        <input class="form-control me-2 search-input" type="search" placeholder="Search" aria-label="Search">
+                    <form class="search-container d-flex" role="search" method="get"
+                        action="@Url.Action("Index", "Book")">
+                        <input class="form-control me-2 search-input" type="search" placeholder="Search"
+                            aria-label="Search" name="searchQuery">
                         <button class="btn btn-outline-success search-button" type="submit">Search</button>
                     </form>
+
                 </div>
             </div>
             <div class="col col-right">
@@ -73,10 +76,12 @@ integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2
                         @string.Join(", ", book.GenreNames)
                     </td>
                     <td>
-                        <a href="@Url.Action("Details", "Book", new { id = book.Id })" class="btn btn-info btn-primary">Details</a>
-                        <a href="@Url.Action("Edit", "Book", new { id = book.Id })" class="btn btn-success btn-primary">Edit</a>
+                        <a href="@Url.Action("Details", "Book", new { id = book.Id })"
+                            class="btn btn-info btn-primary">Details</a>
+                        <a href="@Url.Action("Edit", "Book", new { id = book.Id })"
+                            class="btn btn-success btn-primary">Edit</a>
                         <button data-url="@Url.Action("Delete", "Book", new { id = book.Id })" type="button"
-                                class="btn btn-danger">
+                            class="btn btn-danger">
                             Delete
                         </button>
                     </td>
@@ -108,5 +113,5 @@ integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2
 </script>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
-        crossorigin="anonymous"></script>
+    integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+    crossorigin="anonymous"></script>
