(IMPLEMENTED) Search and dynamic genre for Skooby.Web index !NEEDS UI!

--- a/ASI.Basecode.WebApp/Views/Home/Index I.cshtml
+++ b/ASI.Basecode.WebApp/Views/Home/Index I.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewBag.ShowSideBar = true;  
+    ViewBag.ShowSideBar = true;
     ViewData["Title"] = "Home";
 }
 @section styles {
@@ -9,7 +9,7 @@
 
 <h1 class="module-title">Home</h1>
 <div class="container">
-    <div class="row"> 
+    <div class="row">
 
         <div class="col col-8">
             <div class="module-container">
@@ -21,16 +21,20 @@
                 <div class="row">
                     <div class="col">
                         <div class="masterlist-module-title">
-                            <a class="module-item-title" asp-controller="Book" asp-action="Index"><i class="sidenav-icon fa-solid fa-masks-theater"></i>Genres</a>
+                            <a class="module-item-title" asp-controller="Book" asp-action="Index"><i
+                                    class="sidenav-icon fa-solid fa-masks-theater"></i>Genres</a>
                         </div>
                         <div class="masterlist-module-title-odd">
-                            <a asp-controller="Book" asp-action="Index"><i class="sidenav-icon fa-solid fa-book"></i> Books</a>
+                            <a asp-controller="Book" asp-action="Index"><i class="sidenav-icon fa-solid fa-book"></i>
+                                Books</a>
                         </div>
                         <div class="masterlist-module-title">
-                            <a asp-controller="Book" asp-action="Index"><i class="sidenav-icon fa-solid fa-feather"></i> Authors</a>
+                            <a asp-controller="Book" asp-action="Index"><i class="sidenav-icon fa-solid fa-feather"></i>
+                                Authors</a>
                         </div>
                         <div class="masterlist-module-title-odd">
-                            <a asp-controller="Book" asp-action="Index"><i class="sidenav-icon fa-solid fa-comment-dots"></i>Reviews</a>
+                            <a asp-controller="Book" asp-action="Index"><i
+                                    class="sidenav-icon fa-solid fa-comment-dots"></i>Reviews</a>
                         </div>
                     </div>
                 </div>
