--- a/ASI.Basecode.WebApp/Views/Shared/_Layout.cshtml
+++ b/ASI.Basecode.WebApp/Views/Shared/_Layout.cshtml
@@ -2,6 +2,7 @@
 
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -14,11 +15,12 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/css/toastr.min.css">
     @RenderSection("Styles", required: false)
 </head>
+
 <body>
     @Html.Partial("_Header")
-    <div class="container test">  
-        <main role="main"> 
-             @if (ViewBag.ShowSidebar == true)
+    <div class="container test">
+        <main role="main">
+            @if (ViewBag.ShowSidebar == true)
             {
                 <div class="sidenav">
                     <div class="masterlist-padding masterlist-users">
@@ -27,38 +29,44 @@
                                 <h5>Home</h5>
                             </div>
 
-                            <a asp-controller="Home" asp-action="Index"><i class="sidenav-icon fa-solid fa-gauge"></i>Dashboard</a>
+                            <a asp-controller="Home" asp-action="Index"><i
+                                    class="sidenav-icon fa-solid fa-gauge"></i>Dashboard</a>
                         </div>
-                        
+
                         @if (ViewBag.ShowUserList == true)
                         {
                             <div class="masterlist">
                                 <div class="masterlist-title">
                                     <h5>User List</h5>
                                 </div>
-                                <a class="module-item-title" asp-controller="Admin" asp-action="Index"><i class="sidenav-icon fa-solid fa-user-group"></i>Users</a>
+                                <a class="module-item-title" asp-controller="Admin" asp-action="Index"><i
+                                        class="sidenav-icon fa-solid fa-user-group"></i>Users</a>
                             </div>
 
-                        } 
-                            <div class="masterlist">
-                                <div class="masterlist-title">
-                                    <h5>Book List</h5>
-                                </div>
-                            <a asp-controller="Book" asp-action="Index"><i class="sidenav-icon fa-solid fa-masks-theater"></i>Genres</a>
-                            <a asp-controller="Book" asp-action="Index"><i class="sidenav-icon fa-solid fa-book"></i> Books</a>
-                            <a asp-controller="Book" asp-action="Index"><i class="sidenav-icon fa-solid fa-feather"></i> Authors</a>
-                            <a asp-controller="Book" asp-action="Index"><i class="sidenav-icon fa-solid fa-comment-dots"></i>Reviews</a>
+                        }
+                        <div class="masterlist">
+                            <div class="masterlist-title">
+                                <h5>Book List</h5>
                             </div>
-                         
-                    </div> 
+                            <a asp-controller="Genre" asp-action="Index"><i
+                                    class="sidenav-icon fa-solid fa-masks-theater"></i>Genres</a>
+                            <a asp-controller="Book" asp-action="Index"><i class="sidenav-icon fa-solid fa-book"></i>
+                                Books</a>
+                            <a asp-controller="Author" asp-action="Index"><i class="sidenav-icon fa-solid fa-feather"></i>
+                                Authors</a>
+                            <a asp-controller="Book" asp-action="Index"><i
+                                    class="sidenav-icon fa-solid fa-comment-dots"></i>Reviews</a>
+                        </div>
+
+                    </div>
                 </div>
-            } 
+            }
             <div class="content-container">
                 @RenderBody()
             </div>
         </main>
-    </div> 
- 
+    </div>
+
     <footer class="skooby-footer-content text-center text-lg-start text-white">
 
         <div class="container p-4 pb-0">
@@ -67,8 +75,7 @@
                     <div class="col-md-3 col-lg-3 col-xl-3 mx-auto mt-3">
 
                         <img class="skooby-logo" src="/img/logo1.png"
-                             onclick="window.location.href = '@Url.Action("Index", "Home")';"
-                        />
+                            onclick="window.location.href = '@Url.Action("Index", "Home")';" />
                         <img class="logo-back1" src="/img/logo-back1.png" />
                     </div>
 
@@ -96,7 +103,7 @@
                     </div>
 
                     <hr class="w-100 clearfix d-md-none" />
-                    
+
                     <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mt-3">
                         <h6 class="text-uppercase mb-4 font-weight-bold">Contact</h6>
                         <p><i class="fas fa-home mr-3"></i> CICCT USJ-R, Basak-Pardo, Cebu City, Cebu, PH</p>
@@ -115,16 +122,18 @@
             <div class="container">
                 @Copyright
             </div>
-             
+
         </div>
-    </footer>  
+    </footer>
 
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.js"></script>
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.19.3/jquery.validate.js"></script>
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validation-unobtrusive/3.2.12/jquery.validate.unobtrusive.js"></script>
+    <script type="text/javascript"
+        src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.19.3/jquery.validate.js"></script>
+    <script type="text/javascript"
+        src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validation-unobtrusive/3.2.12/jquery.validate.unobtrusive.js"></script>
     <script src="https://kit.fontawesome.com/7a7c645416.js" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/js/toastr.min.js"></script>
     <script>
@@ -135,7 +144,8 @@
             closeButton: true,
             progressBar: true
         };
-    </script> 
+    </script>
     @await RenderSectionAsync("Scripts", required: false)
 </body>
+
 </html>
