--- a/ASI.Basecode.WebApp/Views/Genre/Create.cshtml
+++ b/ASI.Basecode.WebApp/Views/Genre/Create.cshtml
@@ -5,22 +5,36 @@
     ViewData["Title"] = "Add Genre";
 }
 
-<h2>Add Genre</h2>
+<h2 class="form-title">Add Genre</h2>
 
-<form asp-action="Create">
-    <div class="form-group">
-        <label asp-for="Name" class="control-label"></label>
-        <input asp-for="Name" class="form-control" />
-        <span asp-validation-for="Name" class="text-danger"></span>
+<div class="form-container container">
+    <form asp-action="Create">
+    <div class="row">
+        <div class="col">
+                <div class="form-group">
+                    <label asp-for="Name" class="control-label"></label>
+                    <input asp-for="Name" class="form-control" />
+                    <span asp-validation-for="Name" class="text-danger"></span>
+                </div>
+        </div>
     </div>
-    <div class="form-group">
-        <input type="submit" value="Create" class="btn btn-primary" />
-    </div>
-</form>
+    <div class="row">
+        <div class="col">
+                <div class="col-right col-center">
+                    <div class="form-group">
+                        <a class="btn-back btn-padd" asp-action="Index">Back to List</a>
+                        <input type="submit" value="Create" class="btn-padd btn btn-skooby" />
+                    </div>
+            </div>
+        </div>
 
-<div>
-    <a asp-action="Index">Back to List</a>
+    </div>
+    </form>
 </div>
+
+
+    
+ 
 
 @section Scripts {
     @{
