--- a/ASI.Basecode.WebApp/Views/Genre/Edit.cshtml
+++ b/ASI.Basecode.WebApp/Views/Genre/Edit.cshtml
@@ -5,23 +5,37 @@
     ViewData["Title"] = "Edit Genre";
 }
 
-<h2>Edit Genre</h2>
+<h2 class="form-title">Edit Genre</h2>
 
-<form asp-action="Edit">
-    <input type="hidden" asp-for="Id" />
-    <div class="form-group">
-        <label asp-for="Name" class="control-label"></label>
-        <input asp-for="Name" class="form-control" />
-        <span asp-validation-for="Name" class="text-danger"></span>
+<div class="form-container container">
+    <form asp-action="Edit">
+        <input type="hidden" asp-for="Id" />
+    <div class="row">
+        <div class="col">
+                <div class="form-group">
+                    <label asp-for="Name" class="control-label"></label>
+                    <input asp-for="Name" class="form-control" />
+                    <span asp-validation-for="Name" class="text-danger"></span>
+                </div>
+        </div>
+        
     </div>
-    <div class="form-group">
-        <input type="submit" value="Save" class="btn btn-primary" />
-    </div>
-</form>
-
-<div>
-    <a asp-action="Index">Back to List</a>
+        <div class="row">
+            <div class="col">
+                <div class="col-right col-center"> 
+                    <form asp-action="Edit">
+                        <input type="hidden" asp-for="Id" /> 
+                        <div class="form-group">
+                            <a class="btn-back btn-padd" asp-action="Index">Back to List</a>
+                            <input type="submit" value="Save" class="btn-padd btn btn-success" />
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </form>
 </div>
+ 
 
 @section Scripts {
     @{
