--- a/ASI.Basecode.WebApp/Views/Admin/Index.cshtml
+++ b/ASI.Basecode.WebApp/Views/Admin/Index.cshtml
@@ -17,17 +17,21 @@
     <tbody>
         @foreach (var user in Model)
         {
-                <tr>
-                    <td>@user.Id</td>
-                    <td>@user.Email</td>
-                    <td>@user.UserName</td>
-                    <td>
-                        <!-- Actions like Edit, Delete, etc. -->
-                        <a asp-action="Edit" asp-route-id="@user.Id" class="btn btn-primary">Edit</a>
-                        <a asp-action="Details" asp-route-id="@user.Id" class="btn btn-info">Details</a>
-                        <a asp-action="Delete" asp-route-id="@user.Id" class="btn btn-danger">Delete</a>
-                    </td>
-                </tr>
+            <tr>
+                <td>@user.Id</td>
+                <td>@user.Email</td>
+                <td>@user.UserName</td>
+                <td>
+                    <a asp-action="Edit" asp-route-id="@user.Id" class="btn btn-primary">Edit</a>
+                    <a asp-action="Delete" asp-route-id="@user.Id" class="btn btn-danger" onclick="return confirm('Are you sure you want to delete this user?')">Delete</a>
+                </td>
+            </tr>
         }
     </tbody>
 </table>
+
+@section Scripts {
+    <script>
+        // Add any additional JavaScript here if needed
+    </script>
+}
