--- a/ASI.Basecode.WebApp/Views/Admin/Index.cshtml
+++ b/ASI.Basecode.WebApp/Views/Admin/Index.cshtml
@@ -22,8 +22,15 @@
                 <td>@user.Email</td>
                 <td>@user.UserName</td>
                 <td>
-                    <a asp-action="Edit" asp-route-id="@user.Id" class="btn btn-primary">Edit</a>
-                    <a asp-action="Delete" asp-route-id="@user.Id" class="btn btn-danger" onclick="return confirm('Are you sure you want to delete this user?')">Delete</a>
+                    @* <a asp-action="Edit" asp-route-id="@user.Id" class="btn btn-primary">Edit</a> *@
+                    <form asp-action="Edit" asp-route-id="@user.Id" method="get" style="display:inline;">
+                        <input type="hidden" name="id" value="@user.Id" />
+                        <button type="submit" class="btn btn-primary">Edit</button>
+                    </form>
+                    <form asp-action="Delete" asp-route-id="@user.Id" method="post" onsubmit="return confirm('Are you sure you want to delete this user?')" style="display:inline;">
+                        <input type="hidden" name="id" value="@user.Id" />
+                        <button type="submit" class="btn btn-danger">Delete</button>
+                    </form>
                 </td>
             </tr>
         }
