--- a/Skooby.WebApp/wwwroot/css/dashboard.css
+++ b/Skooby.WebApp/wwwroot/css/dashboard.css
@@ -1,5 +1,12 @@
-﻿body { 
+﻿
+body {
+    display: flex;
+    flex-direction: column;
+    margin: 0 !important;
+    padding: 0 !important;
 }
+
+
 
 :root {
     --primary-color: #FF7519;
@@ -8,21 +15,34 @@
     --star-color: #FFA928;
 }
 
-.skooby-dashboard{
-    margin: 100px 0px;
+
+.skooby-dashboard {
+    margin: 71px 0;
 }
+
+
+
+
 
 .container-wrapper {
     display: flex !important;  
 }
 
 .content-wrapper {
-    width:20%; 
+    width: 70%;
     flex-wrap: wrap;
+    margin: 0; /* reset margin */
+    padding: 0;
+}
+.genre-title {
+ 
+    color: var(--secondary-color); /* Set the color for the genre title */
+    font-size: 32px; /* Set the font size for the genre title */
 }
 
 .book-wrapper {
     display: flex;
+    flex-wrap: wrap;
 }
 
 .book-content {
@@ -53,11 +73,20 @@
 
 
 .book-genre {
-    margin: 30px 30px;
+    margin-top: 30px;
+    color: var(--secondary-color);
+}
+hr {
+    border: none;
+    height: .25px; 
+    background-color: var(--primary-color); /* Set background color to primary color */
+    
 }
 .book-content {
-    display: flex;
-    position: relative; /* Add this to make positioning of the card relative to this container */
+    text-align: center;
+    width: 120px;
+    height: 200px;
+    margin: 10px;
 }
 
 .book-info-card {
@@ -79,6 +108,11 @@
 .book-image-preview:hover + .book-info-card {
     display: block;
  
+}
+
+.sidebar-container {
+    width: 35%;
+    margin-left: 80px;
 }
 
 .sidebar-content {
@@ -104,10 +138,7 @@
     padding: 10px 0px;
 }
 
-.sidebar-container {
-    width: 30%;
-    padding: 20px;
-}
+
 
 .filter-category-container {
     padding: 10px 20px 20px 20px;
@@ -124,9 +155,16 @@
 }
 
 .sidebar-title {
-    color: var(--dark-p-color);
+    color: var(--secondary-color);
+    font-size: 30px;
+    font-weight: 500;
 }
- 
+.filter-genretitle {
+    color: var(--secondary-color);
+    font-size: 30px;
+    font-weight: 500;
+}
+
 .book-info-card {
     padding: 10px;
     text-align: initial;
@@ -166,6 +204,39 @@
 .book-text {
     margin-bottom: 5px !important;
 }
+
+.see-more-button {
+    display: block;
+    margin-top: 10px;
+    padding: 5px 10px;
+    background-color: transparent;
+    color: #B64110;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    text-align: left;
+    text-decoration: underline;
+    transition: color 0.3s;
+    float: right;
+}
+
+    .see-more-button:hover {
+        color: #FF7519;
+    }
+
+.btn-text {
+    background-color: transparent; /* Set background color to transparent */
+    color: var(--primary-color); /* Set text color to primary color */
+    font-size: 15px;
+    border: none;
+    cursor: pointer;
+}
+
+    .btn-text:hover {
+        border: none;
+        background-color: transparent;
+        color: var(--secondary-color);
+    }
 
 .book-rating {
     align-items: center;
