--- a/ASI.Basecode.WebApp/Views/Author/Create.cshtml
+++ b/ASI.Basecode.WebApp/Views/Author/Create.cshtml
@@ -1,12 +1,32 @@
 @model ASI.Basecode.Services.Models.AuthorViewModel
+
 @{
-    ViewBag.ShowSideBar = true;
+    ViewData["Title"] = "Create Author";
 }
-<h2>Author Details</h2>
-<dl>
-    <dt>First Name</dt>
-    <dd>@Model.FirstName</dd>
-    <dt>Last Name</dt>
-    <dd>@Model.LastName</dd>
-    <!-- Other details -->
-</dl>
+
+<h2>Create Author</h2>
+
+<form asp-action="Create" method="post">
+    <div class="form-group">
+        <label asp-for="FirstName" class="control-label">First Name</label>
+        <input asp-for="FirstName" class="form-control" />
+        <span asp-validation-for="FirstName" class="text-danger"></span>
+    </div>
+
+    <div class="form-group">
+        <label asp-for="LastName" class="control-label">Last Name</label>
+        <input asp-for="LastName" class="form-control" />
+        <span asp-validation-for="LastName" class="text-danger"></span>
+    </div>
+
+    <div class="form-group">
+        <input type="submit" value="Create" class="btn btn-primary" />
+        <a asp-action="Index" class="btn btn-secondary">Cancel</a>
+    </div>
+</form>
+
+@section Scripts {
+    @{
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+    }
+}
