--- a/ASI.Basecode.WebApp/Views/Author/Index.cshtml
+++ b/ASI.Basecode.WebApp/Views/Author/Index.cshtml
@@ -2,7 +2,7 @@
 
 @{
     ViewBag.ShowSideBar = true;
-    ViewData["Title"] = "Authors Masterlist";
+    ViewData["Title"] = "Authors Management";
 }
 
 @section styles {
@@ -20,7 +20,7 @@
     }
 </style>
 
-<h2 class="table-title">Authors Masterlist</h2>
+<h2 class="table-title">Authors Management</h2>
 
 <div class="table-container">
     <div class="container table-tools">
