--- a/ASI.Basecode.WebApp/Views/Book/Index.cshtml
+++ b/ASI.Basecode.WebApp/Views/Book/Index.cshtml
@@ -5,7 +5,7 @@ integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2
 
 @{
     ViewBag.ShowSideBar = true;
-    ViewData["Title"] = "Book Masterlist";
+    ViewData["Title"] = "Book Management";
 }
 
 @section styles {
@@ -22,7 +22,7 @@ integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2
         background-color: #fff;
     }
 </style>
-<h2 class="table-title">Book Masterlist</h2>
+<h2 class="table-title">Book Management</h2>
 <div class="table-container">
     <div class="container table-tools">
         
