--- a/ASI.Basecode.WebApp/Views/Genre/Index.cshtml
+++ b/ASI.Basecode.WebApp/Views/Genre/Index.cshtml
@@ -1,7 +1,7 @@
 @model IEnumerable<ASI.Basecode.Services.Models.GenreViewModel>
 
 @{
-    ViewBag.Title = "Genre Masterlist";
+    ViewBag.Title = "Genre Management";
     ViewBag.ShowSideBar = true;
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
@@ -16,7 +16,7 @@
     }
 </style>
 
-<h2 class="table-title">Genre Masterlist</h2>
+<h2 class="table-title">Genre Management</h2>
 
 <div class="table-container">
     <div class="container table-tools">
