author and reviews ui

--- a/ASI.Basecode.WebApp/Views/Admin/Dashboard.cshtml
+++ b/ASI.Basecode.WebApp/Views/Admin/Dashboard.cshtml
@@ -54,8 +54,8 @@
                                 Authors</a>
                         </div>
                         <div class="masterlist-module-title-odd">
-                            <a asp-controller="Book" asp-action="Index"><i
-                                    class="sidenav-icon fa-solid fa-comment-dots"></i>Reviews</a>
+                            <a asp-controller="Reviews" asp-action="Index">
+                                <i class="sidenav-icon fa-solid fa-comment-dots"></i>Reviews</a>
                         </div>
                     </div>
                 </div>
