--- a/ASI.Basecode.WebApp/Views/Admin/Index.cshtml
+++ b/ASI.Basecode.WebApp/Views/Admin/Index.cshtml
@@ -1,6 +1,7 @@
 @model IEnumerable<Microsoft.AspNetCore.Identity.IdentityUser>
 @{
     ViewBag.ShowSideBar = true;
+    ViewBag.ShowUserList = true;
     ViewData["Title"] = "User Management";
 }
 @section styles {
