--- a/ASI.Basecode.WebApp/Views/Reviews/Edit.cshtml
+++ b/ASI.Basecode.WebApp/Views/Reviews/Edit.cshtml
@@ -1,6 +1,7 @@
 @model ASI.Basecode.Services.Models.BookReviewViewModel
 
 @{
+    ViewBag.ShowSideBar = true;
     ViewData["Title"] = "Edit Review";
 }
 
