--- a/ASI.Basecode.WebApp/Views/Shared/_Layout.cshtml
+++ b/ASI.Basecode.WebApp/Views/Shared/_Layout.cshtml
@@ -54,7 +54,7 @@
                                 Books</a>
                             <a asp-controller="Author" asp-action="Index"><i class="sidenav-icon fa-solid fa-feather"></i>
                                 Authors</a>
-                            <a asp-controller="Book" asp-action="Index"><i
+                            <a asp-controller="Reviews" asp-action="Index"><i
                                     class="sidenav-icon fa-solid fa-comment-dots"></i>Reviews</a>
                         </div>
 
