--- a/ASI.Basecode.WebApp/Views/Author/Create.cshtml
+++ b/ASI.Basecode.WebApp/Views/Author/Create.cshtml
@@ -1,29 +1,47 @@
 @model ASI.Basecode.Services.Models.AuthorViewModel
 
 @{
+    ViewBag.ShowSideBar = true;
     ViewData["Title"] = "Create Author";
 }
 
-<h2>Create Author</h2>
+<h2 class="form-title">Create Author</h2>
 
-<form asp-action="Create" method="post">
-    <div class="form-group">
-        <label asp-for="FirstName" class="control-label">First Name</label>
-        <input asp-for="FirstName" class="form-control" />
-        <span asp-validation-for="FirstName" class="text-danger"></span>
-    </div>
+<div class="form-container container">
+    <form asp-action="Create" method="post">
+        <div class="row">
+            <div class="col">
+                <div class="form-group">
+                    <label asp-for="FirstName" class="control-label">First Name</label>
+                    <input asp-for="FirstName" class="form-control" />
+                    <span asp-validation-for="FirstName" class="text-danger"></span>
+                </div>
 
-    <div class="form-group">
-        <label asp-for="LastName" class="control-label">Last Name</label>
-        <input asp-for="LastName" class="form-control" />
-        <span asp-validation-for="LastName" class="text-danger"></span>
-    </div>
 
-    <div class="form-group">
-        <input type="submit" value="Create" class="btn btn-primary" />
-        <a asp-action="Index" class="btn btn-secondary">Cancel</a>
-    </div>
-</form>
+            </div>
+            <div class="col">
+                <div class="form-group">
+                    <label asp-for="LastName" class="control-label">Last Name</label>
+                    <input asp-for="LastName" class="form-control" />
+                    <span asp-validation-for="LastName" class="text-danger"></span>
+                </div>
+
+
+            </div>
+        </div>
+        <div class="row">
+            <div class="col">
+                <div class="col-right col-center">
+                    <div class="form-group">
+                        <a class="btn-back btn-padd" href="@Url.Action("Index", "Author")">Back to List</a>
+                        <input type="submit" value="Create" class="btn btn-skooby btn-primary" />
+
+                    </div>
+                </div>
+            </div>
+        </div>
+    </form>
+</div>
 
 @section Scripts {
     @{
