--- a/ASI.Basecode.WebApp/Views/Genre/Edit.cshtml
+++ b/ASI.Basecode.WebApp/Views/Genre/Edit.cshtml
@@ -27,7 +27,7 @@
                         <input type="hidden" asp-for="Id" /> 
                         <div class="form-group">
                             <a class="btn-back btn-padd" asp-action="Index">Back to List</a>
-                            <input type="submit" value="Save" class="btn-padd btn btn-success" />
+                            <input type="submit" value="Update" class="btn-padd btn btn-success" />
                         </div>
                     </form>
                 </div>
